<resources>
    <string name="app_name">BG Recruitment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome,</string>
    <string name="welcome2">Sign Up to continue</string>
    <string name="fullname">Full Name (First, Last)</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="sex">Sex</string>
    <string name="password">Password</string>
    <string name="cPassword">Confirm Password</string>
    <string name="dob">Date of Birth</string>
    <string name="bvn">BVN</string>
    <string name="nin">NIN</string>
    <string name="state">State</string>
    <string name="hub">Hub</string>
    <string name="lga">Local Government Area</string>
    <string name="id">Government Identification ID</string>
    <string-array name="idType">
        <item>Driver\'s License</item>
        <item>International Passport</item>
        <item>Permanent Voter\'s Card (PVC)</item>
        <item>National Identification Number (NIN)</item>
    </string-array>
    <string name="idImage">Government Identification Card (Image)</string>
    <string name="userPage">List of users</string>
    <string name="email">Email</string>
    <string name="signInText">Not registered? Sign up</string>
    <string name="btnSignIn">GO</string>
    <string name="tvSignIn">Sign in</string>
    <string name="TGL_Rec">Recruitment &amp; Registration of TGLs</string>
    <string name="TGL_Test">Conduct Tests</string>
    <string name="TGL_Interview">Conduct Interviews</string>
    <string name="TGL_Reg">Register and Setup Trust Groups</string>
    <string name="my_notes">My Notes</string>
    <string name="search_here">Search here....</string>
    <string name="clear">clear</string>
    <string name="no_data">no_data</string>
    <string name="add_note">Add Note</string>
    <string name="choose_color">Choose Color</string>
    <string name="some_text">Lorem Ipsum is simply dummy text of
        the printing and typesetting industry. Lorem Ipsum has been
        the industry\'s standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled
        it to make a type specimen book. It has survived not only five
        centuries, but also the leap into electronic typesetting,
        remaining essentially unchanged.
    </string>
    <string name="edited_on">Edited on: %1$s</string>
    <string-array name="Abia">
        <item>Aba North</item>
        <item>Aba South</item>
        <item>Aruppe</item>
        <item>Bende</item>
        <item>Ikwuano</item>
        <item>Isiala Ngwa North</item>
        <item>Isiala Ngwa South</item>
        <item>Isuikwuato</item>
        <item>Obi Ngwa</item>
        <item>Ohafia</item>
        <item>Osisioma Ngwa</item>
        <item>Ugwunagbo</item>
        <item>Ukwa East</item>
        <item>Ukwa West</item>
        <item>Umuahia North</item>
        <item>Umuahia South</item>
        <item>Umu Nneochi</item>
    </string-array>
    <string-array name="Adamawa">
        <item>Demsa</item>
        <item>Fufore</item>
        <item>Ganye</item>
        <item>Girei</item>
        <item>Gombi</item>
        <item>Guyuk</item>
        <item>Hong</item>
        <item>Jada</item>
        <item>Lamurde</item>
        <item>Madagali</item>
        <item>Maiha</item>
        <item>Mayo-Belwa</item>
        <item>Michika</item>
        <item>Mubi North</item>
        <item>Mubi South</item>
        <item>Numan</item>
        <item>Shelleng</item>
        <item>Song</item>
        <item>Toungo</item>
        <item>Yola North</item>
        <item>Yola South</item>
    </string-array>
    <string name="Akwa">Akwa Ibom</string>
    <string-array name="Anambra">
        <item>Aguta</item>
        <item>Awka North</item>
        <item>Awka East</item>
        <item>Anambra East</item>
        <item>Anambra West</item>
        <item>Anaocha</item>
        <item>Ayamelum</item>
        <item>Dunukofia</item>
        <item>Ekwusigo</item>
        <item>Idemili North</item>
        <item>Idemili South</item>
        <item>Ihiala</item>
        <item>Njikoka</item>
        <item>Nnewi North</item>
        <item>Nnewi South</item>
        <item>Ogbaru</item>
        <item>Onitsha North</item>
        <item>Onitsha South</item>
        <item>Orumba North</item>
        <item>Orumba South</item>
        <item>Oyi</item>
    </string-array>
    <string-array name="Bauchi">
        <item>Alkaleri</item>
        <item>Bauchi</item>
        <item>Bogoro</item>
        <item>Damban</item>
        <item>Darazo</item>
        <item>Dass</item>
        <item>Gamawa</item>
        <item>Ganjuwa</item>
        <item>Giade</item>
        <item>Itas/Gadau</item>
        <item>Jama\'are</item>
        <item>Katagum</item>
        <item>Kirfi</item>
        <item>Misau</item>
        <item>Shira</item>
        <item>Tafawa Balewa</item>
        <item>Toro</item>
        <item>Warji</item>
        <item>Zaki</item>
    </string-array>
    <string-array name="Bayelsa">
        <item>Brass</item>
        <item>Ekeremor</item>
        <item>Kolokuma/Opokuma</item>
        <item>Nembe</item>
        <item>Ogbia</item>
        <item>Sagbama</item>
        <item>Southern Ijaw</item>
        <item>Yenagoa</item>
    </string-array>
    <string-array name="Benue">
        <item>Ado</item>
        <item>Agatu</item>
        <item>Apa</item>
        <item>Buruku</item>
        <item>Gboko</item>
        <item>Guma</item>
        <item>Gwer East</item>
        <item>Gwer West</item>
        <item>Katsina-Ala</item>
        <item>Konshisha</item>
        <item>Kwande</item>
        <item>Logo</item>
        <item>Makurdi</item>
        <item>Obi</item>
        <item>Ogbadibo</item>
        <item>Ohimini</item>
        <item>Oju</item>
        <item>Okpokwu</item>
        <item>Oturkpo</item>
        <item>Tarka</item>
        <item>Ukum</item>
        <item>Ushongo</item>
        <item>Vandeikya</item>
    </string-array>
    <string-array name="Borno">
        <item>Abadam</item>
        <item>Askira/Uba</item>
        <item>Bama</item>
        <item>Bayo</item>
        <item>Biu</item>
        <item>Chibok</item>
        <item>Damboa</item>
        <item>Dikwa</item>
        <item>Gubio</item>
        <item>Guzamala</item>
        <item>Gwoza</item>
        <item>Hawul</item>
        <item>Jere</item>
        <item>Kaga</item>
        <item>Kala/Balge</item>
        <item>Konduga</item>
        <item>Kukawa</item>
        <item>Kwaya Kusar</item>
        <item>Mafa</item>
        <item>Magumeri</item>
        <item>Maiduguri</item>
        <item>Marte</item>
        <item>Mobbar</item>
        <item>Monguno</item>
        <item>Ngala</item>
        <item>Nganzai</item>
        <item>Shani</item>
    </string-array>
    <string-array name="Cross_River">
        <item>Abi</item>
        <item>Akamkpa</item>
        <item>Akpabuyo</item>
        <item>Bakassi</item>
        <item>Bekwarra</item>
        <item>Biase</item>
        <item>Boki</item>
        <item>Calabar Municipal</item>
        <item>Calabar South</item>
        <item>Etung</item>
        <item>Ikom</item>
        <item>Obanliku</item>
        <item>Obubra</item>
        <item>Obudu</item>
        <item>Odukpani</item>
        <item>Ogoja</item>
        <item>Yakurr</item>
        <item>Yala</item>
    </string-array>
    <string-array name="Delta">
        <item>Aniocha North</item>
        <item>Aniocha South</item>
        <item>Bomadi</item>
        <item>Burutu</item>
        <item>Ethiope East</item>
        <item>Ethiope West</item>
        <item>Ika North East</item>
        <item>Ika South</item>
        <item>Isoko North</item>
        <item>Isoko South</item>
        <item>Ndokwa East</item>
        <item>Ndokwa West</item>
        <item>Okpe</item>
        <item>Oshimili North</item>
        <item>Oshimili South</item>
        <item>Patani</item>
        <item>Sapele</item>
        <item>Udu</item>
        <item>Ughelli North</item>
        <item>Ughelli South</item>
        <item>Ukwuani</item>
        <item>Uvwie</item>
        <item>Warri North</item>
        <item>Warri South</item>
        <item>Warri South West</item>
    </string-array>
    <string-array name="Ebonyi">
        <item>Abakaliki</item>
        <item>Afikpo North</item>
        <item>Afikpo South(Edda)</item>
        <item>Ebonyi</item>
        <item>Ezza North</item>
        <item>Ezza South</item>
        <item>Ikwo</item>
        <item>Ishielu</item>
        <item>Ivo</item>
        <item>Izzi</item>
        <item>Ohaozara</item>
        <item>Ohaukwu</item>
        <item>Onicha</item>
    </string-array>
    <string-array name="Edo">
        <item>Akoko-Edo</item>
        <item>Egor</item>
        <item>Egor</item>
        <item>Esan Central</item>
        <item>Esan North-East</item>
        <item>Esan South-East</item>
        <item>Esan West</item>
        <item>Etsako East</item>
        <item>Etsako West</item>
        <item>Igueben</item>
        <item>Ikpoba Okha</item>
        <item>Orhionmwon</item>
        <item>Oredo</item>
        <item>Ovia North-East</item>
        <item>Ovia North-West</item>
        <item>Owan East</item>
        <item>Owan West</item>
        <item>Uhunmwonde</item>
        <item>Uhunmwonde</item>
    </string-array>
    <string-array name="Ekiti">
        <item>Ado Ekiti</item>
        <item>Efon</item>
        <item>Ekiti East</item>
        <item>Ekiti South-West</item>
        <item>Ekiti West</item>
        <item>Emure</item>
        <item>Gbonyin</item>
        <item>ido Osi</item>
        <item>Ijero</item>
        <item>Ikere</item>
        <item>Ikole</item>
        <item>Ilejemeje</item>
        <item>Irepodun/Ifelodun</item>
        <item>Ise/Orun</item>
        <item>Moba</item>
        <item>Oye</item>
    </string-array>
    <string-array name="Enugu">
        <item>Aninri</item>
        <item>Awgu</item>
        <item>Enugu East</item>
        <item>Enugu South</item>
        <item>Ezeagu</item>
        <item>Igbo Etiti</item>
        <item>Igbo Eze North</item>
        <item>Igbo Eze South</item>
        <item>Isi Uzo</item>
        <item>Nkanu East</item>
        <item>Nkanu West</item>
        <item>Nsukka</item>
        <item>Oji River</item>
        <item>Udenu</item>
        <item>Udi</item>
        <item>Uzo-Uwani</item>
    </string-array>
    <string-array name="Gombe">
        <item>Akko</item>
        <item>Balanga</item>
        <item>Billiri</item>
        <item>Dukku</item>
        <item>Funakaye</item>
        <item>Gombe</item>
        <item>Kaltungo</item>
        <item>Kwami</item>
        <item>Nafada</item>
        <item>Shongom</item>
        <item>Yamaltu/Deba</item>
    </string-array>
    <string-array name="Imo">
        <item>Aboh Mbaise</item>
        <item>Ahiazu Mbaise</item>
        <item>Ehime Mbano</item>
        <item>Ezinhitte</item>
        <item>Ideato North</item>
        <item>Ideato South</item>
        <item>Ihitter/Uboma</item>
        <item>Ikeduru</item>
        <item>Isiala Mbano</item>
        <item>Isu</item>
        <item>Mbaitoli</item>
        <item>Ngor Okpala</item>
        <item>Njaba</item>
        <item>Nkwerre</item>
        <item>Obowo</item>
        <item>Oguta</item>
        <item>Ohaji/Egbema</item>
    </string-array>
</resources>