<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".HomepageFragment"
     >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

<!--        <ImageView-->
<!--            android:id="@+id/backBtn"-->
<!--            android:layout_width="48dp"-->
<!--            android:layout_height="48dp"-->
<!--            android:layout_centerVertical="true"-->
<!--            android:layout_marginStart="5dp"-->
<!--            android:layout_marginTop="5dp"-->
<!--            android:background="?attr/selectableItemBackgroundBorderless"-->
<!--            android:clickable="true"-->
<!--            android:contentDescription="back"-->
<!--            android:focusable="true"-->
<!--            android:paddingEnd="5dp"-->
<!--            android:paddingBottom="5dp"-->
<!--            android:src="@drawable/ic_round_arrow_back_24"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent">-->

<!--        </ImageView>-->

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_sans_bold"
            android:layout_marginTop="50dp"
            android:padding="20dp"
            android:text="Welcome to Babban gona, What would you like to do?"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/btnRecruitment"
            android:layout_width="370dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rec_btn"
            android:padding="20dp"
            android:text="@string/TGL_Rec"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

        <Button
            android:id="@+id/btnTest"
            android:layout_width="370dp"
            android:layout_height="70dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rec_btn"
            android:padding="20dp"
            android:text="@string/TGL_Test"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRecruitment" />

        <Button
            android:id="@+id/btnInterview"
            android:layout_width="370dp"
            android:layout_height="70dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rec_btn"
            android:padding="20dp"
            android:text="@string/TGL_Interview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnTest" />

        <Button
            android:id="@+id/btnReg"
            android:layout_width="370dp"
            android:layout_height="70dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rec_btn"
            android:padding="20dp"
            android:text="@string/TGL_Reg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnInterview" />

        <Button
            android:id="@+id/btnDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnReg" />

        <Button
            android:id="@+id/btnRec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ButtonRec"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnDetails" />
        <Button
            android:id="@+id/btnFTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Test"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRec" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

